# OLED_mini_display_test

./: Cargo.toml  Embed.toml  README.md  hello_rust.uf2  memory.x
.cargo/: config.toml
src/: main.rs  text.txt
